# cmake

basics_01/: CMakeLists.txt  README.md  main.c
basics_02/: CMakeLists.txt  README.md
basics_02/src/: main.c  mathFuncs.c
basics_03_library/: CMakeLists.txt  README.md
basics_03_library/include/: mathFuncs.h
basics_04_library_linking/: CMakeLists.txt
basics_04_library_linking/src/: main.c
